@@ -16,15 +16,17 @@
  */
 package org.apache.camel.impl;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.apache.camel.Endpoint;
 import org.apache.camel.Exchange;
@@ -42,8 +44,8 @@ import org.slf4j.LoggerFactory;
 public class DefaultInflightRepository extends ServiceSupport implements InflightRepository {
 
     private static final Logger LOG = LoggerFactory.getLogger(DefaultInflightRepository.class);
-    private final ConcurrentMap<String, Exchange> inflight = new ConcurrentHashMap<String, Exchange>();
-    private final ConcurrentMap<String, AtomicInteger> routeCount = new ConcurrentHashMap<String, AtomicInteger>();
+    private final ConcurrentMap<String, Exchange> inflight = new ConcurrentHashMap<>();
+    private final ConcurrentMap<String, AtomicInteger> routeCount = new ConcurrentHashMap<>();
 
     public void add(Exchange exchange) {
         inflight.put(exchange.getExchangeId(), exchange);
@@ -54,7 +56,7 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
     }
 
     public void add(Exchange exchange, String routeId) {
-        AtomicInteger existing = routeCount.putIfAbsent(routeId, new AtomicInteger(1));
+        AtomicInteger existing = routeCount.get(routeId);
         if (existing != null) {
             existing.incrementAndGet();
         }
@@ -77,6 +79,11 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
     }
 
     @Override
+    public void addRoute(String routeId) {
+        routeCount.putIfAbsent(routeId, new AtomicInteger(0));
+    }
+
+    @Override
     public void removeRoute(String routeId) {
         routeCount.remove(routeId);
     }
@@ -89,40 +96,78 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
 
     @Override
     public Collection<InflightExchange> browse() {
-        return browse(-1, false);
+        return browse(null, -1, false);
+    }
+
+    @Override
+    public Collection<InflightExchange> browse(String fromRouteId) {
+        return browse(fromRouteId, -1, false);
     }
 
     @Override
     public Collection<InflightExchange> browse(int limit, boolean sortByLongestDuration) {
-        List<InflightExchange> answer = new ArrayList<InflightExchange>();
+        return browse(null, limit, sortByLongestDuration);
+    }
 
-        List<Exchange> values = new ArrayList<Exchange>(inflight.values());
+    @Override
+    public Collection<InflightExchange> browse(String fromRouteId, int limit, boolean sortByLongestDuration) {
+        Stream<Exchange> values;
+        if (fromRouteId == null) {
+            // all values
+            values = inflight.values().stream();
+        } else {
+            // only if route match
+            values = inflight.values().stream()
+                .filter(e -> fromRouteId.equals(e.getFromRouteId()));
+        }
+
         if (sortByLongestDuration) {
-            Collections.sort(values, new Comparator<Exchange>() {
-                @Override
-                public int compare(Exchange e1, Exchange e2) {
-                    long d1 = getExchangeDuration(e1);
-                    long d2 = getExchangeDuration(e2);
-                    return Long.compare(d1, d2);
-                }
+            // sort by duration and grab the first
+            values = values.sorted((e1, e2) -> {
+                long d1 = getExchangeDuration(e1);
+                long d2 = getExchangeDuration(e2);
+                // need the biggest number first
+                return -1 * Long.compare(d1, d2);
             });
         } else {
             // else sort by exchange id
-            Collections.sort(values, new Comparator<Exchange>() {
-                @Override
-                public int compare(Exchange e1, Exchange e2) {
-                    return e1.getExchangeId().compareTo(e2.getExchangeId());
-                }
-            });
+            values = values.sorted(Comparator.comparing(Exchange::getExchangeId));
         }
 
-        for (Exchange exchange : values) {
-            answer.add(new InflightExchangeEntry(exchange));
-            if (limit > 0 && answer.size() >= limit) {
-                break;
-            }
+        if (limit > 0) {
+            values = values.limit(limit);
         }
+
+        List<InflightExchange> answer = values.map(InflightExchangeEntry::new).collect(Collectors.toList());
         return Collections.unmodifiableCollection(answer);
+    }
+
+    @Override
+    public InflightExchange oldest(String fromRouteId) {
+        Stream<Exchange> values;
+
+        if (fromRouteId == null) {
+            // all values
+            values = inflight.values().stream();
+        } else {
+            // only if route match
+            values = inflight.values().stream()
+                .filter(e -> fromRouteId.equals(e.getFromRouteId()));
+        }
+
+        // sort by duration and grab the first
+        Exchange first = values.sorted((e1, e2) -> {
+            long d1 = getExchangeDuration(e1);
+            long d2 = getExchangeDuration(e2);
+            // need the biggest number first
+            return -1 * Long.compare(d1, d2);
+        }).findFirst().orElse(null);
+
+        if (first != null) {
+            return new InflightExchangeEntry(first);
+        } else {
+            return null;
+        }
     }
 
     @Override
@@ -133,7 +178,7 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
     protected void doStop() throws Exception {
         int count = size();
         if (count > 0) {
-            LOG.warn("Shutting down while there are still " + count + " inflight exchanges.");
+            LOG.warn("Shutting down while there are still {} inflight exchanges.", count);
         } else {
             LOG.debug("Shutting down with no inflight exchanges.");
         }
@@ -142,7 +187,7 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
 
     private static long getExchangeDuration(Exchange exchange) {
         long duration = 0;
-        Date created = exchange.getProperty(Exchange.CREATED_TIMESTAMP, Date.class);
+        Date created = exchange.getCreated();
         if (created != null) {
             duration = System.currentTimeMillis() - created.getTime();
         }
@@ -170,13 +215,13 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         @Override
         @SuppressWarnings("unchecked")
         public long getElapsed() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return 0;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getElapsed();
             } else {
@@ -187,13 +232,13 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         @Override
         @SuppressWarnings("unchecked")
         public String getNodeId() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return null;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getNode().getId();
             } else {
@@ -202,15 +247,25 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         }
 
         @Override
-        @SuppressWarnings("unchecked")
+        public String getFromRouteId() {
+            return exchange.getFromRouteId();
+        }
+
+        @Override
         public String getRouteId() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            return getAtRouteId();
+        }
+
+        @Override
+        @SuppressWarnings("unchecked")
+        public String getAtRouteId() {
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return null;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getRouteId();
             } else {
